aideen-training-lab/results/assoc_recall_aligned.log
   Compiling aideen-block v0.1.0 (/Users/sergiosolis/Programacion/aideen/aideen-block)
   Compiling aideen-backbone v0.1.0 (/Users/sergiosolis/Programacion/aideen/aideen-backbone)
warning: unused import: `Mutex`
 --> aideen-backbone/src/gpu_deq.rs:9:22
  |
9 | use std::sync::{Arc, Mutex};
  |                      ^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0599]: no method named `clone` found for struct `wgpu::BindGroupLayout` in the current scope
    --> aideen-backbone/src/gpu_deq.rs:1234:48
     |
1234 |         let bg1_layout = solve_pool_bg1_layout.clone();
     |                                                ^^^^^ method not found in `BindGroupLayout`

error[E0599]: no method named `clone` found for struct `wgpu::BindGroupLayout` in the current scope
    --> aideen-backbone/src/gpu_deq.rs:1235:61
     |
1235 |         let fused_update_bg1_layout = solve_pool_bg1_layout.clone();
     |                                                             ^^^^^ method not found in `BindGroupLayout`

error[E0609]: no field `assoc_hist` on type `RustDeqBridge`
    --> aideen-backbone/src/gpu_deq.rs:2590:38
     |
2590 |                     resource: bridge.assoc_hist.as_entire_binding(),
     |                                      ^^^^^^^^^^ unknown field
     |
     = note: available fields are: `h_slots`, `slot_coord_unified_pipeline`, `hist_v2_signal_cache_pipeline`, `hist_v2_project_pipeline`, `hist_v2_temporal_pipeline` ... and 29 others

Some errors have detailed explanations: E0599, E0609.
For more information about an error, try `rustc --explain E0599`.
warning: `aideen-backbone` (lib) generated 1 warning
error: could not compile `aideen-backbone` (lib) due to 3 previous errors; 1 warning emitted
